# cmake2

./: .gitignore  CMakeLists.txt  README.md  g_config.h.in  hello_world.cpp  hello_world.h  main.cpp
calculator/: CMakeLists.txt  f0.cpp  f0.h  f1.cpp  f1.h
